[css:mobile] Prevent iOS browser from making font-size too large

--- a/static/_src/styles/base.less
+++ b/static/_src/styles/base.less
@@ -15,6 +15,7 @@ body {
 	font-family: @ff-body;
 	.c(var(--c-text));
 	.bg-c(var(--c-theme));
+	-webkit-text-size-adjust: 100%;
 }
 
 * {
